# SaltAI_Multisubject

./: __init__.py  face_swap.py  pyproject.toml  readme.md  regional_prompting.py  utils.py
javascript/: regional_prompting.js
workflows/: multisubject-ipadapter.json  workflow_2.json  workflow_3.json  workflow_lightning.json  workflow_lightning_3.json
