[project]
name = "pr-saltai_multisubject-41849367"
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/haohaocreates/PR-SaltAI_Multisubject-41849367"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "PR-SaltAI_Multisubject-41849367"
Icon = ""
